add instagram link to splash page

--- a/splash/index.html
+++ b/splash/index.html
@@ -27,7 +27,7 @@
         </main>
         <div class="message js-message screen ghost -wrap -text--center">
             <div class="ghost__child">
-                <div class="h1 -light">Thank you, we will email you when Beta is available.<br />For now follow us <a class="splash__link" href="" target="_blank">@theindex.la</a></div>
+                <div class="h1 -light">Thank you, we will email you when Beta is available.<br />For now follow us @<a class="splash__link" href="https://www.instagram.com/theindex.la" target="_blank">theindex.la</a></div>
             </div>
         </div>
         <!-- Javascript -->
