--- a/splash/index.html
+++ b/splash/index.html
@@ -4,36 +4,9 @@
         <!-- Meta -->
         <meta charset="utf-8" />
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-        <meta name="apple-mobile-web-app-title" content="theindex.la" />
-        <meta name="description" content="" />
-
-        <meta property="og:site_name" content="theindex.la" />
-        <meta property="og:title" content="theindex.la" />
-        <meta property="og:url" content="http://theindex.la" />
-        <meta property="og:type" content="website" />
-        <meta property="og:description" content="" />
-        <meta property="og:image" content="" />
-
-        <meta itemprop="name" content="theindex.la" />
-        <meta itemprop="description" content="" />
-        <meta itemprop="url" content="http://theindex.la" />
-        <meta itemprop="thumbnailUrl" content="" />
-        <meta itemprop="image" content="" />
-
-        <meta name="twitter:title" content="theindex.la" />
-        <meta name="twitter:image" content="" />
-        <meta name="twitter:url" content="http://theindex.la" />
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:description" content="" />
-
-        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-        <link rel="canonical" href="http://theindex.la" />
-        <link rel="image_src" href="" />
 
         <!-- Title -->
-        <title>theindex.la</title>
+        <title>index</title>
 
         <!-- Styles -->
         <link href="/css/splash.css" rel="stylesheet" />
@@ -43,7 +16,7 @@
             <div class="splash__coming -wrap -exp p -light">Coming August 2016</div>
             <div class="ghost__child">
                 <div class="splash__form -wrap">
-                    <h1 class="splash__title h1 -light">theindex.la</h1>
+                    <h1 class="splash__title h1 -light">index</h1>
                     <input class="splash__field js-splash-field p" type="email" placeholder="enter email address for early access" />
                     <button class="splash__button js-splash-button p">Confirm</button>
                 </div>
