--- a/splash/index.html
+++ b/splash/index.html
@@ -4,7 +4,7 @@
         <!-- Meta -->
         <meta charset="utf-8" />
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1" />
-        <!-- <meta name="google-site-verification" content="Vh3Illw1b-CLRJOCLhTnM5DUkdoFDcK1NORSrt1MATs" /> -->
+        <meta name="google-site-verification" content="Vh3Illw1b-CLRJOCLhTnM5DUkdoFDcK1NORSrt1MATs" />
 
         <!-- Title -->
         <title>index</title>
